[gd_scene load_steps=37 format=3 uid="uid://cxsnf6uw6i618"]

[ext_resource type="Script" path="res://player/player.gd" id="1_oofnr"]
[ext_resource type="Texture2D" uid="uid://vv622qsrhf4v" path="res://resources/sprites/charc/fall.png" id="2_8lqsw"]
[ext_resource type="Texture2D" uid="uid://b5y806fik3hiu" path="res://resources/sprites/charc/idle.png" id="3_2mkas"]
[ext_resource type="Texture2D" uid="uid://3nd3xf4ja6lt" path="res://resources/sprites/charc/jump1.png" id="4_stmhq"]
[ext_resource type="Texture2D" uid="uid://cimnfyh8n0h2a" path="res://resources/sprites/charc/run.png" id="5_737wb"]
[ext_resource type="Script" path="res://player/gui.gd" id="6_2qvpg"]
[ext_resource type="Texture2D" uid="uid://dlakgjccv13pp" path="res://resources/gui textures/Vignette_(SuperTux).png" id="20_63rr0"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hekaw"]
radius = 7.0
height = 20.0

[sub_resource type="AtlasTexture" id="AtlasTexture_7m8yf"]
atlas = ExtResource("2_8lqsw")
region = Rect2(0, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_ufrtb"]
atlas = ExtResource("2_8lqsw")
region = Rect2(30, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_o184r"]
atlas = ExtResource("3_2mkas")
region = Rect2(0, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_veskq"]
atlas = ExtResource("3_2mkas")
region = Rect2(30, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_gp3jj"]
atlas = ExtResource("3_2mkas")
region = Rect2(0, 30, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_ek4wy"]
atlas = ExtResource("3_2mkas")
region = Rect2(30, 30, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_n1gyd"]
atlas = ExtResource("5_737wb")
region = Rect2(0, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_3c17g"]
atlas = ExtResource("5_737wb")
region = Rect2(30, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_dq8s4"]
atlas = ExtResource("5_737wb")
region = Rect2(60, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_iaqyr"]
atlas = ExtResource("5_737wb")
region = Rect2(90, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_6civ8"]
atlas = ExtResource("5_737wb")
region = Rect2(0, 30, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_hu32q"]
atlas = ExtResource("5_737wb")
region = Rect2(30, 30, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_k0vef"]
atlas = ExtResource("5_737wb")
region = Rect2(60, 30, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_vv1bc"]
atlas = ExtResource("5_737wb")
region = Rect2(90, 30, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_52d53"]
atlas = ExtResource("5_737wb")
region = Rect2(0, 60, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_cfnn7"]
atlas = ExtResource("5_737wb")
region = Rect2(30, 60, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_ta8oy"]
atlas = ExtResource("5_737wb")
region = Rect2(60, 60, 30, 30)

[sub_resource type="SpriteFrames" id="SpriteFrames_p5bqt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7m8yf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ufrtb")
}],
"loop": true,
"name": &"Fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o184r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_veskq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gp3jj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ek4wy")
}],
"loop": true,
"name": &"Idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_stmhq")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n1gyd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3c17g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dq8s4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iaqyr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6civ8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hu32q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k0vef")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vv1bc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_52d53")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cfnn7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ta8oy")
}],
"loop": true,
"name": &"Run",
"speed": 14.0
}]

[sub_resource type="Animation" id="Animation_xpql8"]
resource_name = "fall"
length = 0.4
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Fall"]
}

[sub_resource type="Animation" id="Animation_7t8f0"]
resource_name = "idle"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}

[sub_resource type="Animation" id="Animation_sulvb"]
resource_name = "jump"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Jump"]
}

[sub_resource type="Animation" id="Animation_hgfbq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}

[sub_resource type="Animation" id="Animation_psg2t"]
resource_name = "run"
length = 1.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Run"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7y6hm"]
_data = {
"Fall": SubResource("Animation_xpql8"),
"Idle": SubResource("Animation_7t8f0"),
"Jump": SubResource("Animation_sulvb"),
"RESET": SubResource("Animation_hgfbq"),
"Run": SubResource("Animation_psg2t")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_atpej"]
size = Vector2(16, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_17pga"]
size = Vector2(30, 16)

[sub_resource type="Gradient" id="Gradient_qg6xn"]
offsets = PackedFloat32Array(0, 0.668831)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_nxi6e"]
gradient = SubResource("Gradient_qg6xn")
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("animation_player", "sprite") groups=["player"]]
collision_layer = 2
script = ExtResource("1_oofnr")
max_health = 100
movement_speed = 100.0
friendly = true
animation_player = NodePath("AnimationPlayer")
sprite = NodePath("AnimatedSprite2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_hekaw")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_p5bqt")
animation = &"Idle"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7y6hm")
}
autoplay = "Idle"

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3, 3)
limit_left = 0
limit_right = 800
position_smoothing_speed = 20.0

[node name="GUI" type="CanvasLayer" parent="Camera2D"]

[node name="GUI" type="Control" parent="Camera2D/GUI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_2qvpg")

[node name="TextureRect" type="TextureRect" parent="Camera2D/GUI/GUI"]
modulate = Color(1, 1, 1, 0.282353)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("20_63rr0")
expand_mode = 1

[node name="HealthLabel" type="Label" parent="Camera2D/GUI/GUI"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "HP: "

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("RectangleShape2D_atpej")

[node name="AttackRotate" type="Node2D" parent="."]

[node name="AttackArea" type="Area2D" parent="AttackRotate"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRotate/AttackArea"]
position = Vector2(15, 0)
shape = SubResource("RectangleShape2D_17pga")

[node name="ImmunityTimer" type="Timer" parent="."]
one_shot = true

[node name="Light" type="PointLight2D" parent="."]
color = Color(0.927931, 0.666224, 0.645256, 1)
texture = SubResource("GradientTexture2D_nxi6e")
texture_scale = 2.32

[connection signal="damaged" from="." to="Camera2D/GUI/GUI" method="_on_player_damaged"]
[connection signal="ready" from="." to="Camera2D/GUI/GUI" method="_on_player_ready"]
[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="Hitbox" to="." method="_on_hitbox_body_exited"]
[connection signal="body_entered" from="AttackRotate/AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackRotate/AttackArea" to="." method="_on_attack_area_body_exited"]
[connection signal="timeout" from="ImmunityTimer" to="." method="_on_immunity_timer_timeout"]
